{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 33,
  "lineage": "a631cda5-98eb-b51d-8328-9c5440d59fc0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162816112568:route-table/rtb-0bfd6dc70d84a25c3",
            "default_route_table_id": "rtb-0bfd6dc70d84a25c3",
            "id": "rtb-0bfd6dc70d84a25c3",
            "owner_id": "162816112568",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0291a9551f08e40f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Infotech-main-rtb"
            },
            "tags_all": {
              "Name": "Infotech-main-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab8396d8c57f62ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Infotech-igw",
            "aws_vpc.Infotech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162816112568:security-group/sg-0120774e95f5877ec",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0120774e95f5877ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "75.71.114.225/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "162816112568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Infotech-default-sg"
            },
            "tags_all": {
              "Name": "Infotech-default-sg"
            },
            "vpc_id": "vpc-0ab8396d8c57f62ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Infotech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Infotech-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea1d45dcdd47edf6",
            "arn": "arn:aws:ec2:us-east-2:162816112568:instance/i-043ffea7afcbc6571",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043ffea7afcbc6571",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2e19aa777eb5d3f",
            "private_dns": "ip-10-0-10-38.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.38",
            "public_ip": "3.139.236.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d9551c9969b76080",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e88734f5beba2bc3",
            "tags": {
              "Name": "Infotech-server"
            },
            "tags_all": {
              "Name": "Infotech-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0120774e95f5877ec"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default-sg",
            "aws_key_pair.ssh-key",
            "aws_subnet.Infotech-subnet-1",
            "aws_vpc.Infotech-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Infotech-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162816112568:internet-gateway/igw-0291a9551f08e40f9",
            "id": "igw-0291a9551f08e40f9",
            "owner_id": "162816112568",
            "tags": {
              "Name": "Infotech-igw"
            },
            "tags_all": {
              "Name": "Infotech-igw"
            },
            "vpc_id": "vpc-0ab8396d8c57f62ca"
          },
          "dependencies": [
            "aws_vpc.Infotech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Infotech-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162816112568:subnet/subnet-0e88734f5beba2bc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e88734f5beba2bc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "162816112568",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Infotech-subnet-1"
            },
            "tags_all": {
              "Name": "Infotech-subnet-1"
            },
            "vpc_id": "vpc-0ab8396d8c57f62ca"
          },
          "dependencies": [
            "aws_vpc.Infotech-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Infotech-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162816112568:vpc/vpc-0ab8396d8c57f62ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02fc35c8e5bb39fdd",
            "default_route_table_id": "rtb-0bfd6dc70d84a25c3",
            "default_security_group_id": "sg-0120774e95f5877ec",
            "dhcp_options_id": "dopt-65eae80d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ab8396d8c57f62ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfd6dc70d84a25c3",
            "owner_id": "162816112568",
            "tags": {
              "Name": "Infotech-vpc"
            },
            "tags_all": {
              "Name": "Infotech-vpc"
            }
          }
        }
      ]
    }
  ]
}